--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.maxmind</groupId>
-  <artifactId>geo-api</artifactId>
+  <artifactId>geoip</artifactId>
   <packaging>jar</packaging>
   <version>1.2.3</version>
   <name>geo-api</name>
@@ -11,9 +11,9 @@
   </dependencies>
   <distributionManagement>
     <repository>
-      <id>m2.dominikdorn.com</id>
-      <name>M2 Repo of Dominik Dorn</name>
-      <url>scp://m2.dominikdorn.com/var/www/m2.dominikdorn.com/htdocs</url>
+      <id>carmunity</id>
+      <name>carmunity.com releases</name>
+      <url>http://nexus.carmunity.de/content/repositories/releases</url>
     </repository>
   </distributionManagement>
 </project>
